# plato-training-casino

./: ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/plato_training_casino/: __init__.py  casino.py
src/plato_training_casino.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
