[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "plato-training-casino"
version = "0.1.0"
description = "Stochastic training data generator — fleet tables, curriculum ordering"
license = {text = "MIT"}
requires-python = ">=3.8"
[project.urls]
Repository = "https://github.com/SuperInstance/plato-training-casino"
